--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
 						Applied ML Researcher
 					</h4>
 					<!-- Mcgill logo -->
-					<div class="col-md-12 text-center">
+					<!-- <div class="col-md-12 text-center">
 						<a href="https://www.mcgill.ca/">
 							<img alt="Mcgill logo" src="images/mcgill_logo_small.png" style="max-width:60%;height:auto" />
 						</a>
-					</div>
+					</div> -->
 					<!-- CIM Logo -->
-					<div class="col-md-12 text-center">
+					<!-- <div class="col-md-12 text-center">
 						<a href="https://www.mcgill.ca/cim/">
 							<img alt="CIM logo" src="images/CIM_logo_2000px_RGB.png" class="img-fluid text-center" style="max-width:70%;height:auto" />
 						</a>
-					</div>
+					</div> -->
 					<!-- Mila Logo -->
-					<div class="col-md-12 text-center">
+					<!-- <div class="col-md-12 text-center">
 						<a href="https://mila.quebec/en/">
 							<img alt="mila logo" src="images/mila.png" style="max-width:50%;height:auto" />
 						</a>
-					</div>
+					</div> -->
 				</div>
 				<div class="col-md-8 mt-5">
 					<!-- <div class="row">
@@ -196,7 +196,7 @@
 								<!-- One experience item start -->
 								<li>
                                     <!-- <i class="fa-li fas fa-building fa-2x"></i> -->
-									<a href="https://www.amd.com/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mcgill logo mini" src="images/amd_100x100.png"/></a>
+									<a href="https://www.amd.com/"><img class="fa-li" style="left:-3em; top:0.4em" alt="amd logo" src="images/amd_100x100.png"/></a>
 									<p class="lead" style="margin:0">FET Lead, Platform Architect</p>
 									<p class="text-muted">AMD, Canada</p>
 								</li>
