--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</h2>
                     <!-- Profile Description -->
 					<h4 class="text-center text-muted mt-3 mb-5 montserrat-font" style="font-size:1.25rem">
-						Applied ML Researcher
+						Applied AI/ML Researcher
 					</h4>
 					<!-- Mcgill logo -->
 					<!-- <div class="col-md-12 text-center">
@@ -137,9 +137,41 @@
 					</ul>
 					<div class="row mt-5">
 						<div class="col-md-6">
+							<!-- Experience -->
+							<h4>
+								<strong>Industry</strong>
+							</h4>
+                            <ul class="list-unstyled fa-ul mt-3" style="margin-left:3.5rem">
+                                <!-- One experience item start -->
+                                 <li>
+									<!-- <i class="fa-li fas fa-building fa-2x"></i> -->
+									<a href="https://www.huawei.com/ca/corporate-citizenship/investing-in-canada"><img class="fa-li" style="left:-3em; top:0.4em" alt="RML logo" src="images/Huawei_logo.png"/></a>
+									<p class="lead" style="margin:0">Senior ML Research Engineer</p>
+									<p class="text-muted" style="margin:0">Huawei Canada</p>
+									<p class="text-muted">(2023 - present)</p>
+								</li>
+								<li>
+									<!-- <i class="fa-li fas fa-building fa-2x"></i> -->
+									<a href="https://www.ryerson.ca/multimedia-research-laboratory/"><img class="fa-li" style="left:-3em; top:0.4em" alt="RML logo" src="images/ryerson_100x100.png"/></a>
+									<p class="lead" style="margin:0">ML Research Assistant</p>
+									<p class="text-muted" style="margin:0">Ryerson University, Canada</p>
+									<p class="text-muted">(2020 - 2021)</p>
+								</li>
+                                <!-- One experience item END -->
+								<!-- One experience item start -->
+								<li>
+                                    <!-- <i class="fa-li fas fa-building fa-2x"></i> -->
+									<a href="https://www.amd.com/"><img class="fa-li" style="left:-3em; top:0.4em" alt="amd logo" src="images/amd_100x100.png"/></a>
+									<p class="lead" style="margin:0">Platform Architect, Feature Enablement Team Lead</p>
+									<p class="text-muted" style="margin:0">AMD, Canada</p>
+									<p class="text-muted">(2018 - 2019)</p>
+								</li>
+                                <!-- One experience item END -->
+						</div>
+						<div class="col-md-6">
 							<!-- Education -->
 							<h4>
-								<strong>Education</strong>
+								<strong>Academic</strong>
 							</h4>
 							<ul class="list-unstyled fa-ul mt-3" style="margin-left:3.5rem">
                                 <!-- One edu institution start -->
@@ -151,9 +183,9 @@
 								</li>
                                 <li>
                                     <!-- <i class="fa-li fas fa-graduation-cap fa-2x"></i> -->
-									<a href="https://mila.quebec/en/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mila logo" src="images/mila.png"/></a>
-									<!-- <p class="lead" style="margin:0">M.Sc., Applied ML</p> -->
-									<p class="text-muted">Mila Quebec AI Institute</p>
+									<a href="https://mila.quebec/en/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mila logo" src="images/MILA_Montreal_logo.png"/></a>
+									<p class="lead" style="margin:0">M.Sc. (co-located w/ McGill)</p>
+									<p class="text-muted">Mila Quebec AI Institute, Montreal, Canada</p>
 								</li>
                                 <!-- One edu institution END -->
 								<!-- One edu institution start -->
@@ -173,35 +205,6 @@
                                 <!-- One edu institution END -->
 							</ul>
 						</div>
-						<div class="col-md-6">
-							<!-- Experience -->
-							<h4>
-								<strong>Experience</strong>
-							</h4>
-                            <ul class="list-unstyled fa-ul mt-3" style="margin-left:3.5rem">
-                                <!-- One experience item start -->
-                                 <li>
-									<i class="fa-li fas fa-building fa-2x"></i>
-									<!-- <a href="https://www.huawei.com/ca/corporate-citizenship/investing-in-canada"><img class="fa-li" style="left:-3em; top:0.4em" alt="RML logo" src="images/ryerson_100x100.png"/></a> -->
-									<p class="lead" style="margin:0">Senior ML Research Engineer</p>
-									<p class="text-muted">Huawei Canada</p>
-								</li>
-								<li>
-									<!-- <i class="fa-li fas fa-building fa-2x"></i> -->
-									<a href="https://www.ryerson.ca/multimedia-research-laboratory/"><img class="fa-li" style="left:-3em; top:0.4em" alt="RML logo" src="images/ryerson_100x100.png"/></a>
-									<p class="lead" style="margin:0">Research Assistant</p>
-									<p class="text-muted">Ryerson University, Canada</p>
-								</li>
-                                <!-- One experience item END -->
-								<!-- One experience item start -->
-								<li>
-                                    <!-- <i class="fa-li fas fa-building fa-2x"></i> -->
-									<a href="https://www.amd.com/"><img class="fa-li" style="left:-3em; top:0.4em" alt="amd logo" src="images/amd_100x100.png"/></a>
-									<p class="lead" style="margin:0">FET Lead, Platform Architect</p>
-									<p class="text-muted">AMD, Canada</p>
-								</li>
-                                <!-- One experience item END -->
-						</div>
 					</div>
 				</div>
 			</div>
@@ -216,10 +219,7 @@
 					<div class="page-header text-right">
 						<!-- Title of section: Publications -->
 						<h2 id="publications">
-							Publications
-						</h2>
-                        <h2 id="publications">
-							(to be updated)
+							Publications & Talks
 						</h2>
 					</div>
 				</div>
@@ -229,11 +229,76 @@
 					<div class="row mt-2 mb-2">
 						<div class="col-md-12" >
 							<h4>
+								<a href="https://arxiv.org/pdf/2505.10640" link-primary">The Hitchhikers Guide to Production-ready Trustworthy Foundation Model powered Software (FMware)</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								<b>K. Vasilevski</b>, B. Rombaut, GK. Rajbahadur, GA. Oliva, K. G, FR Cogo, D. Lin, H. Zhang, B. Chen, K. Thangarajah, AE Hassan, Z. Ming; <b>ACM Knowledge Discovery and Data Mining (KDD 2025)</b>; 2025.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
+								<a href="https://arxiv.org/pdf/2411.09837" link-primary">Real-time Adapting Routing (RAR): Improving Efficiency Through Continuous Learning in Software Powered by Layered Foundation Models</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								<b>K. Vasilevski</b>, D. Lin, AE. Hassan; <b>IEEE International Conference on Software Engineering (ICSE 2025)</b>; 2025.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
+								<a href="https://www.aiwarebootcamp.io/" link-primary">(Presentation) Balancing Cost and Quality in FMware (<a href="https://www.aiwarebootcamp.io/slides/2024_aiwarebootcamp_vasilevski_balancing_cost_and_quality_in_fmware.pdf">slides</a>)</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								<b>K. Vasilevski</b>, D. Lin, AE. Hassan;  <b>AIware Leadership Bootcamp 2024</b>, Toronto; (also mini-bootcamp @ ICSE 2025, Ottawa), Canada.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
+								<a href="https://arxiv.org/pdf/2411.03455?" link-primary">Watson: A Cognitive Observability Framework for the Reasoning of LLM-Powered Agents</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								B. Rombaut, S. Masoumzadeh, <b>K. Vasilevski</b>, D Lin, AE Hassan; arXiv; 2024.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
+								<a href="https://escholarship.mcgill.ca/downloads/1r66j665t" link-primary">Meta-learning for clinical and imaging data fusion for improved deep learning inference</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								<b>Vasilevski, K.</b>, McGill University, Canada (2023).
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
 								<a href="https://hal.inria.fr/hal-03358968v2/document#page=94 class=" link-primary">Consensus learning with multi-rater labels for segmenting and detecting new lesions (competition paper)</a>
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
-								NICHYPORUK, B., <b>VASILEVSKI, K.</b>, HU, A., MYERS-COLET, C., CARDINELL, J., SZETO, J., FALET, J.-P., ZIMMERMANN, E., SCHROETER, J., ARNOLD, D. L., AND ARBEL, T. Consensus learning with multi-rater labels for segmenting and detecting new lesions. Multiple Sclerosis New Lesions Segmentation Challenge, MICCAI (2021).
+								NICHYPORUK, B., <b>VASILEVSKI, K.</b>, HU, A., MYERS-COLET, C., CARDINELL, J., SZETO, J., FALET, J.-P., ZIMMERMANN, E., SCHROETER, J., ARNOLD, D. L., AND ARBEL, T. Multiple Sclerosis New Lesions Segmentation Challenge, <b>MICCAI (2021)</b>.
 							</p>
 						</div>
 					</div>
@@ -247,7 +312,7 @@
 		<div class="col-md-12">
 			<hr />
 			<p class="text-center text-muted ml-3 mr-3">
-				2024, made with <i class="fa fa-heart" style="color:red" aria-hidden="true"></i> in pure <a href="https://getbootstrap.com/">Bootstrap 4</a>, inspired by <a href="https://github.com/wowchemy/starter-academic">Academic Template for Hugo</a>
+				2025, made with <i class="fa fa-heart" style="color:red" aria-hidden="true"></i> in pure <a href="https://getbootstrap.com/">Bootstrap 4</a>, inspired by <a href="https://github.com/wowchemy/starter-academic">Academic Template for Hugo</a>
 			</p>
 		</div>
 	</div>
