fixed github link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<!-- Socials -->
 					<div class="row">
 						<div class="col-md-12 mt-1 mb-2 text-center">
-							<a href="https://github.com/the-promised-LAN"><i class="fab fa-github fa-3x"></i></a>
+							<a href="https://github.com/kirill-vas"><i class="fab fa-github fa-3x"></i></a>
 							<!-- <a href="#"><i class="fab fa-twitter fa-3x"></i></a> -->
 							<a href="https://ca.linkedin.com/in/kirill-vasilevski"><i class="fab fa-linkedin fa-3x"></i></a>
 							<a href="https://scholar.google.ca/citations?user=yIsgw7EAAAAJ&hl=en"><i class="ai ai-google-scholar ai-3x"></i></a>
