--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					</div> -->
 				</div>
 				<div class="col-md-8 mt-5">
-					<!-- <div class="row">
+					<div class="row">
 						<div class="col-md-5">
 							<div class="page-header">
 								<h2>
@@ -104,10 +104,19 @@
 								</h2>
 							</div>
 						</div>
-					</div> -->
-                    <!-- <p class="lead">
-						Can add a description here
-					</p> -->
+					</div>
+                    <p class="lead">
+						I am currently an <b>Applied AI/ML Researcher</b> at Huawei Canada working primarily on LLMs for code/software engineering (e.g. agentic AI, Code LLM training & evaluation, RL-based training, ML deployment and optimization). 
+
+						<br/><br/>
+
+						I completed my <b>M.Sc.</b> at <b><a href="https://cim.mcgill.ca/~pvg/">Probabilistic Vision Group (PVG) lab</a></b> under <a href="https://cim.mcgill.ca/~arbel/"<b>Dr. Tal Arbel</b></a> at <b>McGill University</b> and <b>Mila Quebec AI Institute</b>, researching applications of deep learning in the medical domain, related to 3D brain imaging (MRI), clinical data, and neurological diseases such as Multiple Sclerosis and Alzheimer's diseases (e.g. disease prediction, segmentation, and detection). Primarily, my focus was on metalearning, transformers attention models for multimodal learning in medical ML. Prior to that, I completed my <b>B.Eng, Computer Engineering</b> at <b>Toronto Metropolitan University (formerly Ryerson University)</b>, where I assisted with research into ML applications in biomedical signal processing and ML on edge optimizations at Ryerson Multimedia Lab.
+						
+						<br/>
+						<br/>
+						
+						Feel free to reach out on LinkedIn!
+					</p>
 					<!-- <p class="lead">
 						<i class="fas fa-download pr-1 fa-fw"></i> You can find my complete CV <a href="#" target="_blank">here</a>. -->
 					<!-- </p> -->
