--- a/index.html
+++ b/index.html
@@ -132,16 +132,19 @@
 							AI Agents
 						</li>
                         <li class="list-item">
-							Reinforcement Learning for LLM 
+							Reinforcement Learning (RL) for LLM 
 						</li>
                         <li class="list-item">
-							ML Engineering & Optimization
+							ML Engineering & Optimization (ML on edge)
 						</li>
-                        <li class="list-item">
-							ML on edge
+						<li class="list-item">
+							Medical ML
 						</li>
 						<li class="list-item">
 							Computer Vision & Multimodal Learning
+						</li>
+						<li class="list-item">
+							Metalearning & Learning Dynamics
 						</li>
 					</ul>
 					<div class="row mt-5">
