--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Kirill V.</title>
+	<title>Kirill Vasilevski</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="style.css"> 
@@ -246,6 +246,19 @@
 							</h4>
 							<p>
 								<b>K. Vasilevski</b>, B. Rombaut, GK. Rajbahadur, GA. Oliva, K. G, FR Cogo, D. Lin, H. Zhang, B. Chen, K. Thangarajah, AE Hassan, Z. Ming; <b>ACM Knowledge Discovery and Data Mining (KDD 2025)</b>; 2025.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
+								<a href="https://doi.org/10.1145/3696630.3728621" link-primary">A Tutorial on Software Engineering for FMware.</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								F. Cogo, GK. Rajbahadur, D. Lin, K. Gallaba, B. Rombaut, G. Oliva, J. Lin, <b>K. Vasilevski</b>, and AE. Hassan.; Proceedings of the 33rd ACM International Conference on the Foundations of Software Engineering <b>(ACM FSE'25)</b>; 2025.
 							</p>
 						</div>
 					</div>
