--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					</div>
 					<!-- Title -->
                     <h2 class="montserrat-font">
-						Kirill V.
+						Kirill Vasilevski
 					</h2>
                     <!-- Profile Description -->
 					<h4 class="text-center text-muted mt-3 mb-5 montserrat-font" style="font-size:1.25rem">
