--- a/index.html
+++ b/index.html
@@ -241,6 +241,32 @@
 					<div class="row mt-2 mb-2">
 						<div class="col-md-12" >
 							<h4>
+								<a href="https://centre-for-software-excellence.github.io/SWE-Effi/about/introducing-SWE-effi" link-primary">SWE-Effi: Holistic Effectiveness Evaluation of AI Systems Under Resource Constraints</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								Z. Fan, <b>K. Vasilevski</b>, D. Lin, B. Chen, Y. Chen, Z. Zhong, J. Zhang, P. He, AE. Hassan; Preprint; 2025.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
+								<a href="https://centre-for-software-excellence.github.io/docs/blog/repoforge" link-primary">RepoForge: Training a SOTA Fast-thinking SWE Agent with an End-to-End Data Curation Pipeline Synergizing SFT and RL at Scale</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								 Z. Chen , C. Zhao , B. Chen, D. Lin, A. Leung, GK Rajbahadur, G. Oliva, Y. Chen, Y. Yang, A. Y. Chun Yong Chong, H. Zhang, <b>K. Vasilevski</b>, Y. Ouatiti, A. Bhatia , AE. Hassan; Preprint; 2025.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
 								<a href="https://arxiv.org/pdf/2505.10640" link-primary">The Hitchhikers Guide to Production-ready Trustworthy Foundation Model powered Software (FMware)</a>
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
