--- a/index.html
+++ b/index.html
@@ -280,6 +280,19 @@
 					<div class="row mt-2 mb-2">
 						<div class="col-md-12" >
 							<h4>
+								<a href="https://conf.researchr.org/details/cascon-2025/tutorials-track/5/Turbocharging-AIware-Performance-Engineering-for-Production-Ready-FMware" link-primary">Turbocharging AIware: Performance Engineering for Production-Ready FMware (Tutorial)</a>
+								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
+							</h4>
+							<p>
+								H. Zhang, K. Thangarajah, <b>K. Vasilevski</b>, A. Leung, Boyuan Chen, AE. Hassan; <b>IEEE CASCON</b>; November 2025.
+							</p>
+						</div>
+					</div>
+					<!-- Publication entry END -->
+					<!-- Publication entry START -->
+					<div class="row mt-2 mb-2">
+						<div class="col-md-12" >
+							<h4>
 								<a href="https://doi.org/10.1145/3696630.3728621" link-primary">A Tutorial on Software Engineering for FMware.</a>
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
