--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 					<div class="row mt-2 mb-2">
 						<div class="col-md-12" >
 							<h4>
-								<a href="https://arxiv.org/pdf/2505.10640" link-primary">The Hitchhikers Guide to Production-ready Trustworthy Foundation Model powered Software (FMware)</a>
+								<a href="https://arxiv.org/pdf/2505.10640" link-primary">The Hitchhikers Guide to Production-ready Trustworthy Foundation Model powered Software (FMware)</a><a href="https://kdd2025fmware.github.io/">(Website)</a>
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
