--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
-								<b>K. Vasilevski</b>, D. Lin, AE. Hassan;  <b>AIware Leadership Bootcamp 2024</b>, Toronto; (also mini-bootcamp @ ICSE 2025, Ottawa), Canada.
+								<b>K. Vasilevski</b>, D. Lin, AE. Hassan;  <b>AIware Leadership Bootcamp 2024</b>, Toronto; (also mini-bootcamp @ <b>ICSE 2025</b>, UOttawa), Canada.
 							</p>
 						</div>
 					</div>
@@ -345,7 +345,7 @@
 					<div class="row mt-2 mb-2">
 						<div class="col-md-12" >
 							<h4>
-								<a href="https://escholarship.mcgill.ca/downloads/1r66j665t" link-primary">Meta-learning for clinical and imaging data fusion for improved deep learning inference</a>
+								<a href="https://escholarship.mcgill.ca/concern/theses/76537636d?locale=en" link-primary">Meta-learning for clinical and imaging data fusion for improved deep learning inference</a>
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
