--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
-								B. Rombaut, S. Masoumzadeh, <b>K. Vasilevski</b>, D Lin, AE Hassan; arXiv; 2024.
+								B. Rombaut, S. Masoumzadeh, <b>K. Vasilevski</b>, <b>D Lin, AE Hassan; IEEE/ACM ASE'25</b>; 2025.
 							</p>
 						</div>
 					</div>
