--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 						<br/><br/>
 
-						I completed my <b>M.Sc.</b> at <b><a href="https://cim.mcgill.ca/~pvg/">Probabilistic Vision Group (PVG) lab</a></b> under <a href="https://cim.mcgill.ca/~arbel/"<b>Dr. Tal Arbel</b></a> at <b>McGill University</b> and <b>Mila Quebec AI Institute</b>, researching applications of deep learning in the medical domain, related to 3D brain imaging (MRI), clinical data, and neurological diseases such as Multiple Sclerosis and Alzheimer's diseases (e.g. disease prediction, segmentation, and detection). Primarily, my focus was on metalearning, transformers attention models for multimodal learning in medical ML. Prior to that, I completed my <b>B.Eng, Computer Engineering</b> at <b>Toronto Metropolitan University (formerly Ryerson University)</b>, where I assisted with research into ML applications in biomedical signal processing and ML on edge optimizations at Ryerson Multimedia Lab.
+						I completed my <b>M.Sc.</b> at <b><a href="https://cim.mcgill.ca/~pvg/">Probabilistic Vision Group (PVG) lab</a></b> under <a href="https://cim.mcgill.ca/~arbel/"<b>Dr. Tal Arbel</b></a> at <b>McGill University</b> and <b>Mila Quebec AI Institute</b>, researching applications of deep learning in the medical domain, related to 3D brain imaging (MRI), clinical data, and neurological diseases such as Multiple Sclerosis and Alzheimer's diseases (e.g. disease prediction, segmentation, and detection). Primarily, my focus was on metalearning, transformers models, and attention mechanisms for multimodal learning in medical ML. Prior to that, I completed my <b>B.Eng, Computer Engineering</b> at <b>Toronto Metropolitan University (formerly Ryerson University)</b>, where I assisted with research into ML applications in biomedical signal processing and ML on edge optimizations at Ryerson Multimedia Lab.
 						
 						<br/>
 						<br/>
@@ -192,12 +192,14 @@
 									<a href="https://www.mcgill.ca/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mcgill logo mini" src="images/mcgill_100x100.png"/></a>
 									<p class="lead" style="margin:0">M.Sc., Applied ML</p>
 									<p class="text-muted">McGill University, Montreal, Canada</p>
+									<p class="text-muted">(2021 - 2023)</p>
 								</li>
                                 <li>
                                     <!-- <i class="fa-li fas fa-graduation-cap fa-2x"></i> -->
 									<a href="https://mila.quebec/en/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mila logo" src="images/MILA_Montreal_logo.png"/></a>
 									<p class="lead" style="margin:0">M.Sc. (co-located w/ McGill)</p>
 									<p class="text-muted">Mila Quebec AI Institute, Montreal, Canada</p>
+									<p class="text-muted">(2021 - 2023)</p>
 								</li>
                                 <!-- One edu institution END -->
 								<!-- One edu institution start -->
@@ -206,6 +208,7 @@
 									<a href="https://www.ryerson.ca/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mcgill logo mini" src="images/ryerson_100x100.png"/></a>
 									<p class="lead" style="margin:0">B.Eng., Computer Engineering</p>
 									<p class="text-muted">Ryerson University, Toronto, Canada</p>
+									<p class="text-muted">(2015 - 2020)</p>
 								</li>
                                 <!-- One edu institution END -->
                                 <!-- One edu institution start -->
@@ -336,7 +339,7 @@
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
-								B. Rombaut, S. Masoumzadeh, <b>K. Vasilevski</b>, <b>D Lin, AE Hassan; IEEE/ACM ASE'25</b>; 2025.
+								B. Rombaut, S. Masoumzadeh, <b>K. Vasilevski</b>, D Lin, AE Hassan; <b>IEEE/ACM ASE'25</b>; 2025.
 							</p>
 						</div>
 					</div>
