--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@
                                     <!-- <i class="fa-li fas fa-graduation-cap fa-2x"></i> -->
 									<a href="https://www.mcgill.ca/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mcgill logo mini" src="images/mcgill_100x100.png"/></a>
 									<p class="lead" style="margin:0">M.Sc., Applied ML</p>
-									<p class="text-muted">McGill University, Montreal, Canada</p>
+									<p class="text-muted" style="margin:0">McGill University, Montreal, Canada</p>
 									<p class="text-muted">(2021 - 2023)</p>
 								</li>
                                 <li>
                                     <!-- <i class="fa-li fas fa-graduation-cap fa-2x"></i> -->
 									<a href="https://mila.quebec/en/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mila logo" src="images/MILA_Montreal_logo.png"/></a>
 									<p class="lead" style="margin:0">M.Sc. (co-located w/ McGill)</p>
-									<p class="text-muted">Mila Quebec AI Institute, Montreal, Canada</p>
+									<p class="text-muted" style="margin:0">Mila Quebec AI Institute, Montreal, Canada</p>
 									<p class="text-muted">(2021 - 2023)</p>
 								</li>
                                 <!-- One edu institution END -->
@@ -207,7 +207,7 @@
                                     <!-- <i class="fa-li fas fa-graduation-cap fa-2x"></i> -->
 									<a href="https://www.ryerson.ca/"><img class="fa-li" style="left:-3em; top:0.4em" alt="mcgill logo mini" src="images/ryerson_100x100.png"/></a>
 									<p class="lead" style="margin:0">B.Eng., Computer Engineering</p>
-									<p class="text-muted">Ryerson University, Toronto, Canada</p>
+									<p class="text-muted" style="margin:0">Ryerson University, Toronto, Canada</p>
 									<p class="text-muted">(2015 - 2020)</p>
 								</li>
                                 <!-- One edu institution END -->
