--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 					<div class="row mt-2 mb-2">
 						<div class="col-md-12" >
 							<h4>
-								<a href="https://escholarship.mcgill.ca/concern/theses/76537636d?locale=en" link-primary">Meta-learning for clinical and imaging data fusion for improved deep learning inference</a>
+								<a href="https://escholarship.mcgill.ca/concern/theses/76537636d?locale=en" link-primary">Meta-learning for Clinical and Imaging Data Fusion for Improved Deep Learning Inference</a>
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
@@ -361,7 +361,7 @@
 					<div class="row mt-2 mb-2">
 						<div class="col-md-12" >
 							<h4>
-								<a href="https://hal.inria.fr/hal-03358968v2/document#page=94 class=" link-primary">Consensus learning with multi-rater labels for segmenting and detecting new lesions (competition paper)</a>
+								<a href="https://hal.inria.fr/hal-03358968v2/document#page=94 class=" link-primary">Consensus Learning with Multi-rater Labels for Segmenting and Detecting New Lesions (Competition paper)</a>
 								<!-- <a href="#"><i class="fab fa-github fa-1x ml-2"></i></a> -->
 							</h4>
 							<p>
